--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,7 @@ layout: page
   <i class="fab fa-github" aria-hidden="true"></i>
   <i class="fas fa-graduation-cap" aria-hidden="true"></i>
   <i class="fas fa-envelope"></i>
-  <a class="nice" href="#" style="color: black; font-weight: bold; padding-left: 3px;">CV</a>
+  <a class="nice" href="#">CV</a>
 </div>
 
 <!-- Content -->
@@ -89,11 +89,13 @@ layout: page
   >
   <h2 class="font-weight-bold">Research Interest</h2>
   <p class="col-8" style="margin-left: 10px; font-size: 1.03rem;">
-    • Bioinformatics / computational biology<br />
-    • Algorithms for genome sequencing<br />
-    • Applied graph / combinatorial / discrete algorithms<br />
-    • Algorithms design and analysis<br />
-    • High performance computing
+
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Bioinformatics / computational biology<br />
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Algorithms for genome sequencing<br />
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Applied graph / combinatorial / discrete algorithms<br />
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Algorithms design and analysis<br />
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> High performance computing
+    
   </p>
   <h2 class="font-weight-bold">Teaching</h2>
   <p style="margin-left: 20px; font-size: 1.03rem;">
