--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,18 +6,24 @@ layout: page
 # © 2017-2019 Cotes Chung
 # MIT Licensed
 ---
+
 <head>
   <link rel="stylesheet" href={{ "/assets/css/main.css," | relative_url }} />
   <link
     href="https://fonts.googleapis.com/css?family=Montserrat"
     rel="stylesheet"
   />
-  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto"
+    rel="stylesheet"
+  />
 </head>
 
 <!-- Header -->
 <div class="container">
-  <h1 class="text-muted" style="font-family: Montserrat; font-size: 2.0rem;">Chirag Jain</h1>
+  <h1 class="text-muted" style="font-family: Montserrat; font-size: 2rem">
+    Chirag Jain
+  </h1>
   <p style="font-family: Montserrat; font-size: 1.03rem">
     Assistant Professor
     <br />
@@ -45,24 +51,34 @@ layout: page
   </button> -->
 </div>
 <div class="hov">
-  <i class="fab fa-twitter" aria-hidden="true"></i>
-  <i class="fab fa-github" aria-hidden="true"></i>
-  <i class="fas fa-graduation-cap" aria-hidden="true"></i>
-  <i class="fas fa-envelope"></i>
-  <a class="nice" href="#">CV</a>
+  <i class="fab fa-twitter nice" aria-hidden="true"
+    ><a href="https://twitter.com/chirgjain"></a
+  ></i>
+  <i class="fab fa-github nice" aria-hidden="true"
+    ><a href="https://github.com/cjain7"></a
+  ></i>
+  <i class="fas fa-graduation-cap nice" aria-hidden="true"
+    ><a href="https://scholar.google.com/citations?user=Y2UmkF0AAAAJ&hl=en"></a
+  ></i>
+  <i class="fas fa-envelope nice"><a href="mailto:chirag@iisc.ac.in"></a></i>
+  <a
+    class="nice"
+    href="https://1aaaa1f6-a-62cb3a1a-s-sites.googlegroups.com/site/chirgjain/cv_jain.pdf?attachauth=ANoY7cotLOaaW0fPqZ0aHcMppoHOzuZ4bnfysjHqsvwdRa7zDXqZHnZHI6CFHyhgPUtyvMKNRYK9MiG8IV1v7smKZSsUfFZTXll6BSUZi8zqCyx1yKaNCInwqofheYYnkD21NVdcxl-pzPloFJXDXxd0eOhVgJmggnPZ6ncD6xl5em3E3tNs22og-vjzyGq7uNBR1ND6IaJMjfN8k3Zk00snGXdfyriUSw%3D%3D&attredirects=0"
+    >CV</a
+  >
 </div>
 
 <!-- Content -->
 
-<div class="container" style="margin-top: 15px;">
-  <p style="font-size: 1.03rem;">
+<div class="container" style="margin-top: 15px">
+  <p style="font-size: 1.03rem">
     My research lab develops efficient computational algorithms for
     data-intensive problems in biology. In response to challenging computational
     problems, we design solutions that are provably-good, scalable in practice,
     and useful for life scientists to draw new insights from high-throughput
     data.
   </p>
-  <p style="font-size: 1.03rem;">
+  <p style="font-size: 1.03rem">
     Prior to my appointment at IISc, I was working as a post-doctoral fellow
     with
     <a href="https://genomeinformatics.github.io/people/phillippy/"
@@ -82,30 +98,35 @@ layout: page
     College of Computing Dissertation Award.
   </p>
 
-  <p style="font-size: 0.9rem; font-family: 'Montserrat'; font-size: 1.03rem; font-weight: bold; ">
+  <p
+    style="
+      font-size: 0.9rem;
+      font-family: 'Montserrat';
+      font-size: 1.03rem;
+      font-weight: bold;
+    "
+  >
     I am looking for bright students and postdocs to join my lab. Interested
     folks are welcome to contact me. See my <a href="#"> research plan</a> or
-    <a href="/archieve"> publications</a> to get a glimpse of what I do.</p
-  >
+    <a href="/archieve"> publications</a> to get a glimpse of what I do.
+  </p>
   <h2 class="font-weight-bold">Research Interest</h2>
-  <p class="col-8" style="margin-left: 10px; font-size: 1.03rem;">
-
-    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Bioinformatics / computational biology<br />
-    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Algorithms for genome sequencing<br />
-    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Applied graph / combinatorial / discrete algorithms<br />
-    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Algorithms design and analysis<br />
-    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> High performance computing
-    
+  <p class="col-8" style="margin-left: 10px; font-size: 1.03rem">
+    Bioinformatics / computational biology<br />
+    Algorithms for genome sequencing<br />
+    Applied graph / combinatorial / discrete algorithms<br />
+    Algorithms design and analysis<br />
+    High performance computing
   </p>
   <h2 class="font-weight-bold">Teaching</h2>
-  <p style="margin-left: 20px; font-size: 1.03rem;">
+  <p style="margin-left: 20px; font-size: 1.03rem">
     [2021 January]
     <a href="https://sites.google.com/view/ds202"
       >DS202: Algorithmic Foundations of Big Data Biology</a
     >
   </p>
   <h2 class="font-weight-bold">Selected Publications</h2>
-  <p style="margin-left: 20px ; font-size: 1.03rem;">
+  <p style="margin-left: 20px; font-size: 1.03rem">
     <br /><a
       href="http://cds.iisc.ac.in/faculty/chirag/pubs/2020_jain_weighted.pdf"
     >
