fix main page icons

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,36 +36,16 @@ layout: page
     <a href="https://www.iisc.ac.in/">Indian Institute of Science </a>
     <br />
   </p>
-
-  <!-- Buttons -->
-  <!-- <button class="btn btn-primary btn-sm">
-    <a class="btn-white" href="mailto:chirag@iisc.ac.in">Contact</a>
-  </button>
-  <button class="btn btn-warning ml-2 btn-sm">
-    <a
-      class="btn-black"
-      href="https://1aaaa1f6-a-62cb3a1a-s-sites.googlegroups.com/site/chirgjain/cv_jain.pdf?attachauth=ANoY7cotLOaaW0fPqZ0aHcMppoHOzuZ4bnfysjHqsvwdRa7zDXqZHnZHI6CFHyhgPUtyvMKNRYK9MiG8IV1v7smKZSsUfFZTXll6BSUZi8zqCyx1yKaNCInwqofheYYnkD21NVdcxl-pzPloFJXDXxd0eOhVgJmggnPZ6ncD6xl5em3E3tNs22og-vjzyGq7uNBR1ND6IaJMjfN8k3Zk00snGXdfyriUSw%3D%3D&attredirects=0"
-    >
-      Resume</a
-    >
-  </button> -->
 </div>
+
+
 <div class="hov">
-  <i class="fab fa-twitter nice" aria-hidden="true"
-    ><a href="https://twitter.com/chirgjain"></a
-  ></i>
-  <i class="fab fa-github nice" aria-hidden="true"
-    ><a href="https://github.com/cjain7"></a
-  ></i>
-  <i class="fas fa-graduation-cap nice" aria-hidden="true"
-    ><a href="https://scholar.google.com/citations?user=Y2UmkF0AAAAJ&hl=en"></a
-  ></i>
-  <i class="fas fa-envelope nice"><a href="mailto:chirag@iisc.ac.in"></a></i>
-  <a
-    class="nice"
-    href="https://1aaaa1f6-a-62cb3a1a-s-sites.googlegroups.com/site/chirgjain/cv_jain.pdf?attachauth=ANoY7cotLOaaW0fPqZ0aHcMppoHOzuZ4bnfysjHqsvwdRa7zDXqZHnZHI6CFHyhgPUtyvMKNRYK9MiG8IV1v7smKZSsUfFZTXll6BSUZi8zqCyx1yKaNCInwqofheYYnkD21NVdcxl-pzPloFJXDXxd0eOhVgJmggnPZ6ncD6xl5em3E3tNs22og-vjzyGq7uNBR1ND6IaJMjfN8k3Zk00snGXdfyriUSw%3D%3D&attredirects=0"
-    >CV</a
-  >
+  <a href="mailto:chirag@iisc.ac.in"><i class="fas fa-envelope nice"></i></a>
+  <a href="https://twitter.com/chirgjain" target="_blank"><i class="fab fa-twitter nice" aria-hidden="true"></i></a>
+  <a href="https://github.com/cjain7" target="_blank"><i class="fab fa-github nice" aria-hidden="true"></i></a>
+  <a href="https://scholar.google.com/citations?user=Y2UmkF0AAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap nice" aria-hidden="true"></i></a> 
+  <a class="nice"
+    href="https://drive.google.com/file/d/1mRo3_mCjZFzL4MMErNJk3F-vRFgMHKeU/view?usp=sharing" target="_blank">CV</a>
 </div>
 
 <!-- Content -->
