--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,9 @@ layout: page
   />
 </head>
 
+<!--  ----------------------------------------- -->
+<!-- Name and affiliation -->
+
 <!-- Header -->
 <div class="container">
   <h1 class="text-muted" style="font-family: Montserrat; font-size: 2rem">
@@ -29,16 +32,17 @@ layout: page
     <br />
     Pratiksha Trust Young Investigator
     <br />
-    <a href="https://cds.iisc.ac.in/"
-      >Department of Computational and Data Sciences
-    </a>
+    <a target="_blank" href="https://cds.iisc.ac.in/">Department of Computational and Data Sciences</a>
     <br />
-    <a href="https://www.iisc.ac.in/">Indian Institute of Science </a>
+    <a target="_blank" href="https://www.iisc.ac.in/">Indian Institute of Science </a>
     <br />
   </p>
 </div>
 
+<!--  ----------------------------------------- -->
+<!-- Icons -->
 
+<div class="container">
 <div class="hov">
   <a href="mailto:chirag@iisc.ac.in"><i class="fas fa-envelope nice"></i></a>
   <a href="https://twitter.com/chirgjain" target="_blank"><i class="fab fa-twitter nice" aria-hidden="true"></i></a>
@@ -47,35 +51,20 @@ layout: page
   <a class="nice"
     href="https://drive.google.com/file/d/1mRo3_mCjZFzL4MMErNJk3F-vRFgMHKeU/view?usp=sharing" target="_blank">CV</a>
 </div>
+</div>
 
+<!--  ----------------------------------------- -->
 <!-- Content -->
 
 <div class="container" style="margin-top: 15px">
   <p style="font-size: 1.03rem">
-    My research lab develops efficient computational algorithms for
-    data-intensive problems in biology. In response to challenging computational
-    problems, we design solutions that are provably-good, scalable in practice,
-    and useful for life scientists to draw new insights from high-throughput
-    data.
+    My research lab develops efficient computational algorithms for data-intensive problems in biology.
+    In response to challenging computational problems, we design solutions that are provably-good, scalable in practice, and useful for life scientists to draw new insights from high-throughput data.
   </p>
   <p style="font-size: 1.03rem">
-    Prior to my appointment at IISc, I was working as a post-doctoral fellow
-    with
-    <a href="https://genomeinformatics.github.io/people/phillippy/"
-      >Adam Phillippy</a
-    >
-    at the <a href="https://www.genome.gov/">National Institutes of Health</a>.
-    In 2019, I received Ph.D. at
-    <a href="https://www.cse.gatech.edu/">Georgia Tech</a>, where I worked with
-    <a href="https://www.cc.gatech.edu/~saluru/">Srinivas Aluru</a>, and
-    collaborated closely with
-    <a href="https://ce.gatech.edu/people/Faculty/711/overview"
-      >Kostas Konstantinidis</a
-    >
-    and <a href="https://sanchit-misra.github.io/">Sanchit Misra</a>. I did my
-    bachelors in computer science at Indian Institute of Technology Delhi. I'm a
-    recipient of the Pratiksha Trust Young Investigator Award and Georgia Tech
-    College of Computing Dissertation Award.
+    Prior to my appointment at IISc, I was working as a post-doctoral fellow with <a href="https://genomeinformatics.github.io/people/phillippy/">Adam Phillippy</a> at the <a href="https://www.genome.gov/">National Institutes of Health</a>.
+    In 2019, I received Ph.D. at <a href="https://www.cse.gatech.edu/">Georgia Tech</a>, where I was advised by <a href="https://www.cc.gatech.edu/~saluru/">Srinivas Aluru</a> for my <a href="http://hdl.handle.net/1853/61258">dissertation work</a>.
+    I did my bachelors in computer science at Indian Institute of Technology Delhi. I'm a recipient of the Pratiksha Trust Young Investigator Award and Georgia Tech College of Computing Dissertation Award.
   </p>
 
   <p
@@ -86,85 +75,101 @@ layout: page
       font-weight: bold;
     "
   >
-    I am looking for bright students and postdocs to join my lab. Interested
-    folks are welcome to contact me. See my <a href="#"> research plan</a> or
-    <a href="/archieve"> publications</a> to get a glimpse of what I do.
+    I am looking for bright students and postdocs to join my lab.
+    Interested folks are welcome to contact me. See <a href="https://at-cg.github.io/tabs/projects/">projects</a> and
+    <a href="https://at-cg.github.io/tabs/publications/">publications</a> to learn about our work.
   </p>
-  <h2 class="font-weight-bold">Research Interest</h2>
-  <p class="col-8" style="margin-left: 10px; font-size: 1.03rem">
-    Bioinformatics / computational biology<br />
-    Algorithms for genome sequencing<br />
-    Applied graph / combinatorial / discrete algorithms<br />
-    Algorithms design and analysis<br />
-    High performance computing
+
+  <!--  ----------------------------------------- -->
+  <!-- Research interests -->
+
+  <h2 class="font-weight-bold">Research Interests</h2>
+  <p style="margin-left: 20px; font-size: 1.03rem">
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Bioinformatics / computational biology<br />
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Algorithms for genome sequencing<br />
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Applied graph / combinatorial / discrete algorithms<br />
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Algorithms design and analysis<br />
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> High performance computing
   </p>
+
+  <!--  ----------------------------------------- -->
+  <!-- Teaching -->
+
   <h2 class="font-weight-bold">Teaching</h2>
   <p style="margin-left: 20px; font-size: 1.03rem">
     [2021 January]
-    <a href="https://sites.google.com/view/ds202"
-      >DS202: Algorithmic Foundations of Big Data Biology</a
-    >
+    <a target="_blank" href="https://sites.google.com/view/ds202">DS202: Algorithmic Foundations of Big Data Biology</a>
   </p>
+
+  <!--  ----------------------------------------- -->
+  <!-- Selected publications -->
+
   <h2 class="font-weight-bold">Selected Publications</h2>
   <p style="margin-left: 20px; font-size: 1.03rem">
-    <br /><a
-      href="http://cds.iisc.ac.in/faculty/chirag/pubs/2020_jain_weighted.pdf"
-    >
-      Weighted minimizer sampling improves long read mapping</a
-    >
-    <br /><a class="text-muted">
-      C Jain, A Rhie, H Zhang, C Chu, B Walenz, S Koren, A Phillippy. ISMB
-      2020</a
-    >
+
     <br />
-    <br /><a
-      href="http://cds.iisc.ac.in/faculty/chirag/pubs/2020_jain_complexity.pdf"
-    >
-      On the complexity of sequence to graph alignment
-    </a>
-    <br /><a class="text-muted">
-      C Jain, ⇔ H Zhang, Yu Gao, S Aluru. RECOMB 2019
-    </a>
+    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2020_jain_weighted.pdf">
+      Weighted minimizer sampling improves long read mapping</a>
     <br />
-    <br /><a
-      href="http://cds.iisc.ac.in/faculty/chirag/pubs/2019_dilthey_strain.pdf"
-    >
-      Strain-level metagenomic assignment and compositional estimation for long
-      reads with MetaMaps</a
-    >
-    <br /><a class="text-muted">
-      A Dilthey, C Jain, S Koren, A Phillippy. Nature Comm. 2019
-    </a>
+    <a class="text-muted"><u>C Jain</u>, A Rhie, H Zhang, C Chu, B Walenz, S Koren, A Phillippy. ISMB 2020</a>
     <br />
-    <br /><a
-      href="http://cds.iisc.ac.in/faculty/chirag/pubs/2019_jain_accelerating.pdf"
-    >
-      Accelerating sequence alignment to graphs</a
-    >
-    <br /><a class="text-muted">
-      C Jain, S Misra, H Zhang, A Dilthey, S Aluru. IEEE IPDPS 2019 (GT news)
-    </a>
+
     <br />
-    <br /><a
-      href="http://cds.iisc.ac.in/faculty/chirag/pubs/2018_jain_high.pdf"
-    >
-      High throughput ANI analysis of 90K prokaryotic genomes reveals clear
-      species boundaries</a
-    >
-    <br /><a class="text-muted">
-      C Jain, L Rodriguez, A Phillippy, K Konstantinidis, S Aluru. Nature Comm.
-      2018 (GT news)</a
-    >
+    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2020_jain_complexity.pdf">
+      On the complexity of sequence to graph alignment</a>
     <br />
-    <br /><a
-      href="http://cds.iisc.ac.in/faculty/chirag/pubs/2018_jain_fast_b.pdf"
-    >
-      A fast approximate algorithm for mapping long reads to large reference
-      databases</a
-    >
-    <br /><a class="text-muted">
-      C Jain, A Dilthey, S Koren, S Aluru, A Phillippy. RECOMB 2017
-    </a>
+    <a class="text-muted"><u>C Jain</u>, ⇔ H Zhang, Yu Gao, S Aluru. RECOMB 2019</a>
+    <br />
+
+    <br />
+    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2019_dilthey_strain.pdf">
+      Strain-level metagenomic assignment and compositional estimation for long reads with MetaMaps</a>
+    <br />
+    <a class="text-muted">A Dilthey, <u>C Jain</u>, S Koren, A Phillippy. Nature Comm. 2019</a>
+    <br />
+
+    <br />
+    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2019_jain_accelerating.pdf">
+      Accelerating sequence alignment to graphs</a>
+    <br />
+    <a class="text-muted"><u>C Jain</u>, S Misra, H Zhang, A Dilthey, S Aluru. IEEE IPDPS 2019</a>
+    <a target="_blank" href="https://www.cc.gatech.edu/news/621751/identifying-differences-disease-causing-genomes-just-went-few-days-few-hours" style="color: #800000">(GT news)</a>
+    <br />
+
+    <br />
+    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2018_jain_high.pdf">
+      High throughput ANI analysis of 90K prokaryotic genomes reveals clear species boundaries</a>
+    <br />
+    <a class="text-muted"><u>C Jain</u>, L Rodriguez, A Phillippy, K Konstantinidis, S Aluru. Nature Comm. 2018</a>
+    <a target="_blank" href="https://www.cc.gatech.edu/news/616894/new-approach-speeds-genomic-testing-microbial-species" style="color: #800000">(GT news)</a>
+    <br />
+
+    <br />
+    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2018_jain_fast_b.pdf">
+      A fast approximate algorithm for mapping long reads to large reference databases</a>
+    <br />
+    <a class="text-muted"><u>C Jain</u>, A Dilthey, S Koren, S Aluru, A Phillippy. RECOMB 2017</a>
+
   </p>
+
+  <!--  ----------------------------------------- -->
+  <!-- Awards to PI -->
+
+  <h2 class="font-weight-bold">Selected Awards</h2>
+  <p style="margin-left: 20px; font-size: 1.03rem">
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Pratiksha Trust Young Investigator Award 2020</br>
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Georgia Tech College of Computing Dissertation Award <a href="https://www.cc.gatech.edu/content/annual-awards-and-honors-past-recipients">2020</a></br>
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Best Poster Award <a href="https://recomb2019.org/awards/">RECOMB 2019</a></br>
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> ACM Supercomputing Reproducibility Award 2016
+    (<font style="color: #800000">news</font>:
+    <a href="https://cacm.acm.org/blogs/blog-cacm/200433-sc16-adds-computational-reproducibility-to-student-competition/fulltext">CACM</a>,
+    <a href="https://www.hpcwire.com/off-the-wire/paper-georgia-tech-researchers-earns-acm-results-replicated-badge/">HPCWire</a>,
+    <a href="http://sc16.supercomputing.org/studentssc/scc-reproducibility-initiative-winner/index.html">SC</a>,
+    <a href="https://insidehpc.com/2016/12/radio-free-hpc-reviews-sc16-student-cluster-competition-results/">insideHPC</a>
+    )</br>
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> NVIDIA Award for Best Paper using GPU Technologies IEEE HiPC 2014</br>
+  </p>
+
+
 </div>
 <hr />
