revise paper urls on home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -108,28 +108,28 @@ layout: page
   <p style="margin-left: 20px; font-size: 1.03rem">
 
     <br />
-    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2020_jain_weighted.pdf">
+    <a target="_blank" href="https://drive.google.com/file/d/1VNdlFJ1w36tUWjSprsatGyZs_KJugxD0/view?usp=sharing">
       Weighted minimizer sampling improves long read mapping</a>
     <br />
     <a class="text-muted"><u>C Jain</u>, A Rhie, H Zhang, C Chu, B Walenz, S Koren, A Phillippy. ISMB 2020</a>
     <br />
 
     <br />
-    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2020_jain_complexity.pdf">
+    <a target="_blank" href="https://drive.google.com/file/d/12SN5wWBLv36frBzVvChoFSVx3by32t7t/view?usp=sharing">
       On the complexity of sequence to graph alignment</a>
     <br />
     <a class="text-muted"><u>C Jain</u>, ⇔ H Zhang, Yu Gao, S Aluru. RECOMB 2019</a>
     <br />
 
     <br />
-    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2019_dilthey_strain.pdf">
+    <a target="_blank" href="https://drive.google.com/file/d/1D7ACvwyOwPusfNcyvz1xyTznZIoHHHo4/view?usp=sharing">
       Strain-level metagenomic assignment and compositional estimation for long reads with MetaMaps</a>
     <br />
     <a class="text-muted">A Dilthey, <u>C Jain</u>, S Koren, A Phillippy. Nature Comm. 2019</a>
     <br />
 
     <br />
-    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2019_jain_accelerating.pdf">
+    <a target="_blank" href="https://drive.google.com/file/d/1UHM97Tult4wOv6pXa3OowP6fpdMkCvkF/view?usp=sharing">
       Accelerating sequence alignment to graphs</a>
     <br />
     <a class="text-muted"><u>C Jain</u>, S Misra, H Zhang, A Dilthey, S Aluru. IEEE IPDPS 2019</a>
@@ -137,7 +137,7 @@ layout: page
     <br />
 
     <br />
-    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2018_jain_high.pdf">
+    <a target="_blank" href="https://drive.google.com/file/d/1u6j7PN0QZPRMfaIr6GtU7Hxu5yVR3MgA/view?usp=sharing">
       High throughput ANI analysis of 90K prokaryotic genomes reveals clear species boundaries</a>
     <br />
     <a class="text-muted"><u>C Jain</u>, L Rodriguez, A Phillippy, K Konstantinidis, S Aluru. Nature Comm. 2018</a>
@@ -145,7 +145,7 @@ layout: page
     <br />
 
     <br />
-    <a target="_blank" href="http://cds.iisc.ac.in/faculty/chirag/pubs/2018_jain_fast_b.pdf">
+    <a target="_blank" href="https://drive.google.com/file/d/1r23RXyXvpSS0_Vcus-Wo747ARHcc0zi1/view?usp=sharing">
       A fast approximate algorithm for mapping long reads to large reference databases</a>
     <br />
     <a class="text-muted"><u>C Jain</u>, A Dilthey, S Koren, S Aluru, A Phillippy. RECOMB 2017</a>
@@ -167,7 +167,7 @@ layout: page
     <a href="http://sc16.supercomputing.org/studentssc/scc-reproducibility-initiative-winner/index.html">SC</a>,
     <a href="https://insidehpc.com/2016/12/radio-free-hpc-reviews-sc16-student-cluster-competition-results/">insideHPC</a>
     )</br>
-    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> NVIDIA Award for Best Paper using GPU Technologies IEEE HiPC 2014</br>
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> NVIDIA Award for Best Paper using GPU Technologies <a href="https://hipc.org/hipc2014/">IEEE HiPC 2014</a></br>
   </p>
 
 
