--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -100,6 +100,11 @@ layout: page
     [2021 January]
     <a target="_blank" href="https://sites.google.com/view/ds202">DS202: Algorithmic Foundations of Big Data Biology</a>
   </p>
+  <p style="margin-left: 20px; font-size: 1.03rem">
+    [2021 August]
+    <a target="_blank" href="http://cds.iisc.ac.in/courses/ds221/">DS221: Introduction to Scalable Systems</a>
+  </p>
+
 
   <!--  ----------------------------------------- -->
   <!-- Selected publications -->
