--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -162,6 +162,7 @@ layout: page
 
   <h2 class="font-weight-bold">Selected Awards</h2>
   <p style="margin-left: 20px; font-size: 1.03rem">
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> NERSC HPC Achievement Award <a href="https://www.hpcwire.com/off-the-wire/nersc-honors-early-career-researchers-with-2022-achievement-awards/">2022</a></br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Pratiksha Trust Young Investigator Award 2020</br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Georgia Tech College of Computing Dissertation Award <a href="https://www.cc.gatech.edu/content/annual-awards-and-honors-past-recipients">2020</a></br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Best Poster Award <a href="https://recomb2019.org/awards/">RECOMB 2019</a></br>
