--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -164,7 +164,7 @@ layout: page
   <p style="margin-left: 20px; font-size: 1.03rem">
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> NERSC HPC Achievement Award 2022
     (<font style="color: #800000">news</font>:
-    <a href="https://www.hpcwire.com/off-the-wire/nersc-honors-early-career-researchers-with-2022-achievement-awards/">HPCWire</a>,
+    <a href="https://www.hpcwire.com/off-the-wire/nersc-honors-early-career-researchers-with-2022-achievement-awards/">HPCWire</a>
     )</br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Pratiksha Trust Young Investigator Award 2020</br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Georgia Tech College of Computing Dissertation Award <a href="https://www.cc.gatech.edu/content/annual-awards-and-honors-past-recipients">2020</a></br>
