--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -102,7 +102,7 @@ layout: page
   </p>
   <p style="margin-left: 20px; font-size: 1.03rem">
     [2022 August]
-    <a target="_blank" href="http://cds.iisc.ac.in/courses/ds221/">DS221: Introduction to Scalable Systems</a>
+    <a target="_blank" href="http://cds.iisc.ac.in/courses/ds221/">DS221: Introduction to Scalable Systems</a> (jointly with Sathish Vadhiyar, Matthew Jacob)
   </p>
 
 
