--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: page
   <p style="font-family: Montserrat; font-size: 1.03rem">
     Assistant Professor
     <br />
-    Pratiksha Trust Young Investigator
+    Intermediate Fellow, DBT/Wellcome Trust India Alliance
     <br />
     <a target="_blank" href="https://cds.iisc.ac.in/">Department of Computational and Data Sciences</a>
     <br />
