--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: page
   <p style="font-family: Montserrat; font-size: 1.03rem">
     Assistant Professor
     <br />
-    Intermediate Fellow, DBT/Wellcome Trust India Alliance
+    IA DBT/Wellcome Trust Intermediate Fellow
     <br />
     <a target="_blank" href="https://cds.iisc.ac.in/">Department of Computational and Data Sciences</a>
     <br />
@@ -162,6 +162,7 @@ layout: page
 
   <h2 class="font-weight-bold">Selected Awards</h2>
   <p style="margin-left: 20px; font-size: 1.03rem">
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> India Alliance Intermdiate Fellowship Award 2024 </br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> NERSC HPC Achievement Award 2022
     (<font style="color: #800000">news</font>:
     <a href="https://www.hpcwire.com/off-the-wire/nersc-honors-early-career-researchers-with-2022-achievement-awards/">HPCWire</a>
