--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -170,7 +170,7 @@ layout: page
     )
     --></br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Pratiksha Trust Young Investigator Award 2020</br>
-    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Georgia Tech College of Computing Dissertation Award <a href="https://www.cc.gatech.edu/content/annual-awards-and-honors-past-recipients">2020</a></br>
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Georgia Tech College of Computing Dissertation Award 2020</br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> Best Poster Award <a href="https://recomb2019.org/awards/">RECOMB 2019</a></br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> ACM Supercomputing Reproducibility Award 2016
     <!-- 
