--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -63,7 +63,7 @@ layout: page
   </p>
   <p style="font-size: 1.03rem">
     Prior to my appointment at IISc, I was working as a post-doctoral fellow with <a href="https://genomeinformatics.github.io/people/phillippy/">Adam Phillippy</a> at the <a href="https://www.genome.gov/">National Institutes of Health</a>.
-    In 2019, I received Ph.D. at <a href="https://www.cse.gatech.edu/">Georgia Tech</a>, where I was advised by <a href="https://www.cc.gatech.edu/~saluru/">Srinivas Aluru</a> for my <a href="http://hdl.handle.net/1853/61258">dissertation work</a>.
+    In 2019, I received Ph.D. at <a href="https://www.cse.gatech.edu/">Georgia Tech</a>, where I was advised by <a href="https://www.cc.gatech.edu/~saluru/">Srinivas Aluru</a>.
     I did my bachelors in computer science at Indian Institute of Technology Delhi. I'm a recipient of the Pratiksha Trust Young Investigator Award and Georgia Tech College of Computing Dissertation Award.
   </p>
 
