--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -97,8 +97,12 @@ layout: page
 
   <h2 class="font-weight-bold">Teaching</h2>
   <p style="margin-left: 20px; font-size: 1.03rem">
-    [2024 January]
+    [2025 January]
     <a target="_blank" href="https://sites.google.com/view/ds202">DS202: Algorithmic Foundations of Big Data Biology</a>
+  </p>
+  <p style="margin-left: 20px; font-size: 1.03rem">
+    [2025 January]
+    NPTEL- Algorithms in Computational Biology and Sequence Analysis
   </p>
   <p style="margin-left: 20px; font-size: 1.03rem">
     [2022 August]
@@ -162,6 +166,7 @@ layout: page
 
   <h2 class="font-weight-bold">Selected Awards</h2>
   <p style="margin-left: 20px; font-size: 1.03rem">
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> IIT Delhi Graduates of Last Decade (GOLD) Award 2024 </br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> India Alliance Intermdiate Fellowship Award 2024 </br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> NERSC HPC Achievement Award 2022
     <!--
