--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -167,7 +167,7 @@ layout: page
   <h2 class="font-weight-bold">Selected Awards</h2>
   <p style="margin-left: 20px; font-size: 1.03rem">
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> IIT Delhi Graduates of Last Decade (GOLD) Award 2024 </br>
-    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> India Alliance Intermdiate Fellowship Award 2024 </br>
+    <a style="font-weight: bolder; font-size: 1.7rem;">•</a> India Alliance Intermediate Fellowship Award 2024 </br>
     <a style="font-weight: bolder; font-size: 1.7rem;">•</a> NERSC HPC Achievement Award 2022
     <!--
     (<font style="color: #800000">news</font>:
